--- a/adapter/id-generator/uuid/pom.xml
+++ b/adapter/id-generator/uuid/pom.xml
@@ -9,5 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>domain</artifactId>
+    <artifactId>adapter-id-generator-uuid</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>esgi-user</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
+
 </project>
