try without java 9

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>adapter/repository/in-memory-simple</module>
         <module>adapter/id-generator/jug</module>
         <module>adapter/id-generator/uuid</module>
+        <module>ui</module>
     </modules>
     <build>
         <plugins>
