--- a/esgi-graph/pom.xml
+++ b/esgi-graph/pom.xml
@@ -17,6 +17,12 @@
             <version>11.0.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>bitcoin-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
